Fixed issue with contributions not showing.
- Last 10 contributions show on home page when logged in
- Added default cursors for pastes.

--- a/saic/paste/static/css/base.css
+++ b/saic/paste/static/css/base.css
@@ -315,7 +315,7 @@ span.date {
 }
 
 span.description {
-    color: #444;
+    color: #666;
 }
 
 li.active {
