--- a/saic/paste/static/css/paste.css
+++ b/saic/paste/static/css/paste.css
@@ -4,6 +4,19 @@
     padding: 0;
 }
 
+#sortable > li {
+  cursor: grab;
+  cursor:-moz-grab;
+  cursor:-webkit-grab;
+}
+
+#sortable > li.ui-sortable-helper {
+  cursor: grabbing;
+  cursor:-moz-grabbing;
+  cursor:-webkit-grabbing;
+
+}
+
 #sortable li.ui-sortable-helper > div {
     border-top: 1px solid #CCC;
     border-radius: 5px;
